Changes
=======

1.3.0 (TBD)
-----------

1.3a3 (TBD)
-----------

New features:

- The CRS class has been added to rasterio.__all__.
- Python file objects and file-like objects from, for example, fsspec are
  adapted for opening to get a dataset without copying file data to a
  MemoryFile (#2141).

Bug fixes:

- Fix the "adjust" keyword argument of rasterio.plot.show (#2359).
- Preserve origin when scaling in creating a WarpedVRT (#2364).
- Exceptions are no longer raised for a category of errors emitted from
  warp-related GDAL functions (#2353).
- Enable unsafe casting for copyto in the merge tool (#2265).

1.3a2 (2021-10-19)
------------------

New features:

- The InMemoryRaster class in rasterio._io has been removed and replaced by a
  more direct and efficient wrapper around numpy arrays (#2301).
- Add support for PROJ JSON based interchange for CRS (#2212).
  CRS.to_dict(proj_json=True) returns a PROJ JSON style dict and CRS.from_dict()
  will accept a PROJ JSON style dict. PROJ JSON text is accepted by
  CRS.from_user_input().

1.3a1 (2021-10-14)
------------------

Note: building from source now requires Cython (#2016).

New features:

- More efficient window intersection and union (#2164).
- New Affine, GCP, and RFC transformer classes (#2225).
- Add support for enum and tuple type creation options (#2102)

Bug fixes:

- Standardize rounding of window lengths and offsets to match GDAL (#2311).
- Allow addition of subdatasets to GPKG rasters opened in "w" mode with the
  APPEND_SUBDATASET creation option (#2300).
- WarpedVRT: Remove deprecated dst_* parameters (#2197).
- Add GDAL DLL directory to DLL search path on Windows and Python >= 3.8.
  DLLs will be loaded from .libs (for wheels) or from directories in PATH
  environment variable.
- Add version to CRS.to_wkt() for WKT2 support (#2122).

1.2.10 (2021-10-11)
-------------------

- Raise WarpOperationError if ChunkAndWarp* do not succeed instead of silently